fixed misalignment issues

--- a/style/style.scss
+++ b/style/style.scss
@@ -157,7 +157,7 @@ body {
       display: block;
       position: relative;
       top: -50%;
-      left: -10%;
+      // left: -10%;
       width: 120%;
       height: 200%;
     }
